# llm-metascore

./: .gitignore  LICENSE  README.md  pyproject.toml
src/llm_metascore/: cli.py
src/llm_metascore/core/: aggregate.py  models.py  vendors.py
src/llm_metascore/fetch/: arena.py  openrouter.py  text_parsers.py
