[project]
name = "llm-metascore"
version = "0.1.1"
description = "Rank top general and coding LLMs from local snapshots"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Robert Damiano" }]
license = { text = "MIT" }
dependencies = [
  "beautifulsoup4>=4.12.2",
  "typer>=0.12.3",
  "pydantic>=2.8.2"
]

[project.scripts]
llm-metascore = "llm_metascore.cli:app"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
